tests/errors/sealed_03.f90
program sealed_03
    implicit none
    integer, sealed :: x
    x = 1
end program sealed_03
